Removed parallax Fixed UI issues. Moved bottom bar to separate container - fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ body {
   background-color: #F7F6F2;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   box-sizing: border-box;
 }
